--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "immer": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
@@ -24,6 +25,8 @@
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
+    "react-navigation-stack": "^2.2.3",
+    "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^4.0.3",
     "reactotron-redux": "^3.1.2",
